<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:contentDescription="@string/appName"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/retryR"
        android:layout_width="267dp"
        android:layout_height="65dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_style"
        android:text="@string/retryButton"
        android:textColor="@color/redPuzzling"
        android:textSize="50sp"
        android:textStyle="bold"
        app:fontFamily="@font/regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/exitR"
        android:layout_width="136dp"
        android:layout_height="69dp"
        android:background="@drawable/button_style"
        android:text="@string/exitButton"
        android:textColor="@color/redPuzzling"
        android:textSize="50sp"
        android:textStyle="bold"
        app:fontFamily="@font/regular"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retryR" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="416dp"
        android:layout_height="394dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/livesRemaining"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/no_time_alert" />

</androidx.constraintlayout.widget.ConstraintLayout>