<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adigiana"
        android:shadowColor="#000000"
        android:text="@string/appName"
        android:textColor="#b55e1c"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/playButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:targetApi="jelly_bean" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="234dp"
        android:layout_height="77dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/regular"
        android:text="@string/playButton"
        android:textColor="#c41212"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/multiplayerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:targetApi="jelly_bean" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="234dp"
        android:layout_height="77dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/regular"
        android:text="@string/settingsButton"
        android:textColor="#c41212"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/closeSesiontButton"
        tools:ignore="MissingConstraints,TextContrastCheck"
        tools:layout_editor_absoluteX="89dp"
        tools:targetApi="jelly_bean" />

    <Button
        android:id="@+id/closeSesiontButton"
        android:layout_width="201dp"
        android:layout_height="71dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/regular"
        android:text="@string/logOutButton"
        android:textColor="#FF3D00"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,TextContrastCheck"
        tools:targetApi="jelly_bean" />

    <Button
        android:id="@+id/multiplayerButton"
        android:layout_width="234dp"
        android:layout_height="116dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/regular"
        android:text="@string/playMultiplayerButton"
        android:textColor="#c41212"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scoreButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:targetApi="jelly_bean" />

    <Button
        android:id="@+id/scoreButton"
        android:layout_width="234dp"
        android:layout_height="77dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/regular"
        android:text="@string/scoreButton"
        android:textColor="#c41212"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/settingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:targetApi="jelly_bean" />

</android.support.constraint.ConstraintLayout>