<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mockup_p9___eng_1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adigiana"
        android:shadowColor="#000000"
        android:text="@string/pausePage"
        android:textColor="#b55e1c"
        android:textSize="70sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="61dp"
        tools:targetApi="jelly_bean" />

    <Button
        android:id="@+id/musicButton"
        android:layout_width="234dp"
        android:layout_height="59dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/regular"
        android:text="@string/musicButton"
        android:textColor="#C41212"
        android:textSize="34sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="79dp"
        tools:layout_editor_absoluteY="194dp"
        tools:targetApi="jelly_bean" />

    <SeekBar
        android:id="@+id/musicSlider"
        style="@android:style/Widget.DeviceDefault.Light.SeekBar"
        android:layout_width="235dp"
        android:layout_height="59dp"
        android:max="10"
        android:progress="3"
        tools:layout_editor_absoluteX="79dp"
        tools:layout_editor_absoluteY="265dp" />

    <Button
        android:id="@+id/effectsButton"
        android:layout_width="234dp"
        android:layout_height="59dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/regular"
        android:text="@string/effectsButton"
        android:textColor="#C41212"
        android:textColorHighlight="#C41212"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="79dp"
        tools:layout_editor_absoluteY="336dp"
        tools:targetApi="jelly_bean" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="234dp"
        android:layout_height="59dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/regular"
        android:text="@string/backButton"
        android:textColor="#C41212"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="79dp"
        tools:layout_editor_absoluteY="499dp"
        tools:targetApi="jelly_bean" />

    <SeekBar
        android:id="@+id/effectsSlider"
        style="@android:style/Widget.DeviceDefault.Light.SeekBar"
        android:layout_width="235dp"
        android:layout_height="59dp"
        android:max="10"
        android:progress="3"
        tools:layout_editor_absoluteX="79dp"
        tools:layout_editor_absoluteY="421dp" />

    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="266dp"
        android:layout_height="79dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/regular"
        android:text="@string/mainMenu"
        android:textColor="#C41212"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="592dp"
        tools:targetApi="jelly_bean" />

</android.support.constraint.ConstraintLayout>