<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/playButton"
        android:layout_width="234dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/adigiana"
        android:text="@string/musicButton"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/musicSlider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="234dp"
        android:layout_height="0dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/adigiana"
        android:text="@string/mainMenu"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreButton" />

    <Button
        android:id="@+id/multiplayerButton"
        android:layout_width="234dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/adigiana"
        android:text="@string/effectsButton"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/musicSlider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicSlider" />

    <Button
        android:id="@+id/scoreButton"
        android:layout_width="234dp"
        android:layout_height="0dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/adigiana"
        android:text="@string/backButton"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/settingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicSlider2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="61dp"
        android:layout_marginBottom="42dp"
        android:fontFamily="@font/regular"
        android:shadowColor="#000000"
        android:text="@string/settingsButton"
        android:textColor="#b55e1c"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/playButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/musicSlider"
        android:layout_width="234dp"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/multiplayerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playButton" />

    <SeekBar
        android:id="@+id/musicSlider2"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="234dp"
        android:layout_height="0dp"
        android:layout_marginBottom="21dp"
        app:layout_constraintBottom_toTopOf="@+id/scoreButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiplayerButton" />

</android.support.constraint.ConstraintLayout>