<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/ini_session2"
        android:layout_width="319dp"
        android:layout_height="80dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="284dp"
        android:background="@drawable/button_style"
        android:text="@string/logInButton"
        android:textColor="#c41212"
        android:textSize="48sp"
        android:textStyle="bold"
        app:fontFamily="@font/regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="289dp"
        android:layout_height="53dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:backgroundTint="#c41212"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/insertMailInput"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/redPuzzling"
        android:textColorHint="@color/colorAccent"
        app:fontFamily="@font/regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/password"
        android:layout_width="273dp"
        android:layout_height="54dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:backgroundTint="#c41212"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/insertPasswordInput"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        app:fontFamily="@font/regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:shadowColor="#000000"
        android:text="@string/appName"
        android:textColor="#b55e1c"
        android:textSize="70sp"
        android:textStyle="bold"
        app:fontFamily="@font/adigiana"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>