<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#000000"
        android:text="@string/appName"
        android:textColor="#b55e1c"
        android:textSize="70sp"
        android:textStyle="bold"
        app:fontFamily="@font/adigiana"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437"
        tools:targetApi="jelly_bean" />

    <GridView
        android:id="@+id/tableropuzzles"
        android:layout_width="368dp"
        android:layout_height="477dp"
        android:layout_marginTop="16dp"
        android:horizontalSpacing="10dp"
        android:numColumns="2"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:verticalSpacing="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/help"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:fontFamily="@font/regular"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_style"
        android:text="@string/helpButton"
        android:textColor="#c41212"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/camera"
        android:layout_width="74dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_style"
        android:contentDescription="@string/appName"
        android:drawableBottom="@drawable/ic_camera"
        android:textColor="#c41212"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="@font/regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="InvalidId,TextContrastCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/botonvolver"
        android:layout_width="234dp"
        android:layout_height="77dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_style"
        android:contentDescription="@string/backButton"
        android:text="@string/backButton"
        android:textColor="#FF3D00"
        android:textSize="50sp"
        android:textStyle="bold"
        app:fontFamily="@font/regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>